--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
         // Your Firebase configuration - REPLACE [your-api-key-here] with your actual API key
         const firebaseConfig = {
-            apiKey: "[your-api-key-here]", // <-- PUT YOUR API KEY HERE
+            apiKey: "AIzaSyBMS5W47Xjn5G0mO2Me5xIKalLzv-ukLZA", // <-- PUT YOUR API KEY HERE
             authDomain: "gamerbingo-fc745.firebaseapp.com",
             databaseURL: "https://gamerbingo-fc745-default-rtdb.europe-west1.firebasedatabase.app",
             projectId: "gamerbingo-fc745",
