--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             background: linear-gradient(135deg, #f5f5f5 0%, #e8e8e8 100%);
-            min-height: 100vh;
+            height: 100vh;
             display: flex;
             flex-direction: column;
+            overflow: hidden;
         }
 
         /* Header Styles */
@@ -25,8 +26,7 @@
             color: white;
             padding: 1rem;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
+            flex-shrink: 0;
             z-index: 100;
         }
 
@@ -52,6 +52,8 @@
             width: 100%;
             padding: 1rem;
             gap: 1rem;
+            overflow: hidden;
+            min-height: 0;
         }
 
         /* Sidebar Styles */
@@ -64,6 +66,8 @@
             display: flex;
             flex-direction: column;
             gap: 1.5rem;
+            overflow-y: auto;
+            flex-shrink: 0;
         }
 
         .player-section, .leaderboard-section {
@@ -90,6 +94,13 @@
             border: 2px solid #e0e0e0;
             border-radius: 6px;
             font-size: 1rem;
+            -webkit-appearance: none;
+            appearance: none;
+        }
+
+        .player-join input:focus {
+            outline: none;
+            border-color: #667eea;
         }
 
         .player-join button {
@@ -126,6 +137,27 @@
             display: flex;
             flex-direction: column;
             gap: 0.5rem;
+            max-height: 300px;
+            overflow-y: auto;
+            padding-right: 0.5rem;
+        }
+
+        .leaderboard::-webkit-scrollbar {
+            width: 6px;
+        }
+
+        .leaderboard::-webkit-scrollbar-track {
+            background: #f1f1f1;
+            border-radius: 3px;
+        }
+
+        .leaderboard::-webkit-scrollbar-thumb {
+            background: #888;
+            border-radius: 3px;
+        }
+
+        .leaderboard::-webkit-scrollbar-thumb:hover {
+            background: #555;
         }
 
         .leaderboard-item {
@@ -164,6 +196,8 @@
             padding: 1.5rem;
             display: flex;
             flex-direction: column;
+            overflow: hidden;
+            min-width: 0;
         }
 
         .task-grid {
@@ -171,6 +205,8 @@
             grid-template-columns: repeat(5, 1fr);
             gap: 1rem;
             flex: 1;
+            overflow-y: auto;
+            padding: 0.5rem;
         }
 
         .task-card {
@@ -185,9 +221,10 @@
             cursor: pointer;
             transition: all 0.3s ease;
             font-size: 0.9rem;
-            min-height: 100px;
+            aspect-ratio: 1;
             position: relative;
             overflow: hidden;
+            word-break: break-word;
         }
 
         .task-card:hover:not(.completed) {
@@ -329,9 +366,10 @@
         }
 
         /* Responsive Design */
-        @media (max-width: 968px) {
+        @media (max-width: 1024px) {
             .container {
                 flex-direction: column;
+                overflow-y: auto;
             }
 
             .sidebar {
@@ -339,18 +377,20 @@
                 flex-direction: row;
                 padding: 1rem;
                 gap: 1rem;
+                flex-shrink: 0;
+                overflow-y: visible;
             }
 
             .player-section, .leaderboard-section {
                 flex: 1;
             }
 
-            .task-grid {
-                grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            .main-board {
+                min-height: 500px;
             }
         }
 
-        @media (max-width: 640px) {
+        @media (max-width: 768px) {
             .header h1 {
                 font-size: 1.5rem;
             }
@@ -360,12 +400,28 @@
             }
 
             .task-grid {
-                grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-                gap: 0.5rem;
+                grid-template-columns: repeat(3, 1fr);
+                gap: 0.75rem;
             }
 
             .task-card {
-                min-height: 80px;
+                font-size: 0.85rem;
+                padding: 0.75rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 0.5rem;
+            }
+
+            .task-grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 0.5rem;
+                padding: 0.25rem;
+            }
+
+            .task-card {
                 font-size: 0.8rem;
                 padding: 0.5rem;
             }
@@ -374,6 +430,14 @@
                 width: calc(100% - 40px);
                 left: 20px;
                 right: 20px;
+                bottom: 70px;
+            }
+
+            .admin-toggle {
+                width: 40px;
+                height: 40px;
+                bottom: 15px;
+                right: 15px;
             }
         }
     </style>
