--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             background: linear-gradient(135deg, #f5f5f5 0%, #e8e8e8 100%);
-            height: 100vh;
+            min-height: 100vh;
             display: flex;
             flex-direction: column;
-            overflow: hidden;
         }
 
         /* Header Styles */
@@ -26,7 +25,8 @@
             color: white;
             padding: 1rem;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            flex-shrink: 0;
+            position: sticky;
+            top: 0;
             z-index: 100;
         }
 
@@ -52,8 +52,7 @@
             width: 100%;
             padding: 1rem;
             gap: 1rem;
-            overflow: hidden;
-            min-height: 0;
+            min-height: 0; /* Fix for Firefox flex issues */
         }
 
         /* Sidebar Styles */
@@ -66,8 +65,9 @@
             display: flex;
             flex-direction: column;
             gap: 1.5rem;
-            overflow-y: auto;
             flex-shrink: 0;
+            max-height: calc(100vh - 140px);
+            overflow-y: auto;
         }
 
         .player-section, .leaderboard-section {
@@ -94,13 +94,6 @@
             border: 2px solid #e0e0e0;
             border-radius: 6px;
             font-size: 1rem;
-            -webkit-appearance: none;
-            appearance: none;
-        }
-
-        .player-join input:focus {
-            outline: none;
-            border-color: #667eea;
         }
 
         .player-join button {
@@ -137,27 +130,6 @@
             display: flex;
             flex-direction: column;
             gap: 0.5rem;
-            max-height: 300px;
-            overflow-y: auto;
-            padding-right: 0.5rem;
-        }
-
-        .leaderboard::-webkit-scrollbar {
-            width: 6px;
-        }
-
-        .leaderboard::-webkit-scrollbar-track {
-            background: #f1f1f1;
-            border-radius: 3px;
-        }
-
-        .leaderboard::-webkit-scrollbar-thumb {
-            background: #888;
-            border-radius: 3px;
-        }
-
-        .leaderboard::-webkit-scrollbar-thumb:hover {
-            background: #555;
         }
 
         .leaderboard-item {
@@ -196,17 +168,16 @@
             padding: 1.5rem;
             display: flex;
             flex-direction: column;
-            overflow: hidden;
-            min-width: 0;
+            min-height: 0; /* Fix for flex children */
+            overflow: auto;
         }
 
         .task-grid {
             display: grid;
             grid-template-columns: repeat(5, 1fr);
             gap: 1rem;
-            flex: 1;
-            overflow-y: auto;
-            padding: 0.5rem;
+            height: 100%;
+            align-content: start;
         }
 
         .task-card {
@@ -221,10 +192,10 @@
             cursor: pointer;
             transition: all 0.3s ease;
             font-size: 0.9rem;
-            aspect-ratio: 1;
             position: relative;
             overflow: hidden;
-            word-break: break-word;
+            aspect-ratio: 1;
+            min-height: 100px;
         }
 
         .task-card:hover:not(.completed) {
@@ -263,6 +234,12 @@
         .task-card.editing {
             background: #fff3cd;
             border-color: #ffeaa7;
+            cursor: text;
+        }
+
+        .task-card.editing:hover {
+            transform: none;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
 
         @keyframes taskComplete {
@@ -363,26 +340,36 @@
             border-radius: 6px;
             font-size: 0.9rem;
             color: #666;
+            transition: all 0.3s ease;
+        }
+
+        .admin-status.active {
+            background: #fff3cd;
+            color: #856404;
+            font-weight: 600;
         }
 
         /* Responsive Design */
-        @media (max-width: 1024px) {
+        @media (max-width: 968px) {
             .container {
                 flex-direction: column;
-                overflow-y: auto;
             }
 
             .sidebar {
                 width: 100%;
+                max-width: 100%;
                 flex-direction: row;
                 padding: 1rem;
                 gap: 1rem;
-                flex-shrink: 0;
-                overflow-y: visible;
+                max-height: none;
             }
 
             .player-section, .leaderboard-section {
                 flex: 1;
+            }
+
+            .task-grid {
+                grid-template-columns: repeat(5, 1fr);
             }
 
             .main-board {
@@ -390,7 +377,7 @@
             }
         }
 
-        @media (max-width: 768px) {
+        @media (max-width: 640px) {
             .header h1 {
                 font-size: 1.5rem;
             }
@@ -400,44 +387,21 @@
             }
 
             .task-grid {
-                grid-template-columns: repeat(3, 1fr);
-                gap: 0.75rem;
-            }
-
-            .task-card {
-                font-size: 0.85rem;
-                padding: 0.75rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .container {
-                padding: 0.5rem;
-            }
-
-            .task-grid {
-                grid-template-columns: repeat(2, 1fr);
+                grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
                 gap: 0.5rem;
-                padding: 0.25rem;
             }
 
             .task-card {
                 font-size: 0.8rem;
                 padding: 0.5rem;
+                min-height: 80px;
+                aspect-ratio: 1;
             }
 
             .admin-panel {
                 width: calc(100% - 40px);
                 left: 20px;
                 right: 20px;
-                bottom: 70px;
-            }
-
-            .admin-toggle {
-                width: 40px;
-                height: 40px;
-                bottom: 15px;
-                right: 15px;
             }
         }
     </style>
@@ -447,6 +411,9 @@
         <h1>🦆 Duck's Taskmaster</h1>
         <div class="game-status">
             <span id="completedCount">0</span> / 25 tasks completed
+            <span id="editModeIndicator" style="display: none; margin-left: 1rem; background: #fff3cd; color: #856404; padding: 0.25rem 0.75rem; border-radius: 20px; font-size: 0.9rem;">
+                📝 Edit Mode Active
+            </span>
         </div>
     </header>
 
@@ -713,6 +680,11 @@
 
         // Handle task click
         function handleTaskClick(taskId) {
+            // Don't complete tasks in edit mode
+            if (editMode) {
+                return;
+            }
+            
             if (!currentPlayerId) {
                 alert('Please select yourself from the dropdown first!');
                 return;
@@ -882,6 +854,15 @@
         window.toggleEditMode = function() {
             editMode = !editMode;
             document.getElementById('editModeStatus').textContent = editMode ? 'ON' : 'OFF';
+            document.getElementById('editModeIndicator').style.display = editMode ? 'inline-block' : 'none';
+            const adminStatus = document.getElementById('adminStatus');
+            if (editMode) {
+                adminStatus.classList.add('active');
+                adminStatus.innerHTML = '⚠️ Edit mode: <span id="editModeStatus">ON</span><br><small>Double-click tasks to edit. Completion disabled.</small>';
+            } else {
+                adminStatus.classList.remove('active');
+                adminStatus.innerHTML = 'Edit mode: <span id="editModeStatus">OFF</span>';
+            }
             updateTaskGrid();
         };
 
