--- a/index.html
+++ b/index.html
@@ -530,11 +530,11 @@
 
         // Default task names
         const defaultTasks = [
-            "Complete daily standup", "Fix bug #42", "Review pull request", "Update documentation", "Write unit tests",
-            "Refactor legacy code", "Deploy to staging", "Optimize database query", "Design new feature", "Team meeting",
-            "Code review session", "Update dependencies", "Fix CSS issues", "Add error handling", "Performance testing",
-            "Security audit", "API integration", "Mobile responsive", "User feedback", "Sprint planning",
-            "Debug production issue", "Create test data", "Update README", "Configure CI/CD", "Final presentation"
+            "Eat pasta", "Win a 1v1", "Explode a car", "Pet a dog", "Get 1st place or MVP",
+            "Finish a run (not a literal run)", "Build a Masjid", "Make someone laugh", "Dress in a full purple outfit", "Beat a boss",
+            "Get 10k currency", "Find a Legendary item", "Take a screenshot with 10 zombies in the frame", "Level up", "Kill a friendly NPC",
+            "Solve a puzzle", "Find a real life brand", "Kill something while you are dead", "Take a screenshot of a duck", "Perform a 10 hit combo",
+            "Get 8 headshots in a row", "Crash the game", "Plant and harvest 3 different plants", "In a character creator, make Dio Brando", "Heal exactly 50HP in one burst"
         ];
 
         // Initialize game
