--- a/index.html
+++ b/index.html
@@ -523,9 +523,9 @@
 
         // Player colors
         const playerColors = [
-            '#FF6B6B', '#4ECDC4', '#45B7D1', '#96CEB4', '#FECA57',
-            '#FF9FF3', '#54A0FF', '#48DBFB', '#A29BFE', '#FD79A8',
-            '#FDCB6E', '#6C5CE7', '#A8E6CF', '#FFD3B6', '#FF8B94'
+            '#5BC0EB', '#FDE74C', '#9BC53D', '#C3423F', '#404E4D',
+            '#3C91E6', '#342E37', '#A2D729', '#D00000', '#FA824C',
+            '#ffbe0b', '#fb5607', '#ff006e', '#8338ec', '#3a86ff'
         ];
 
         // Default task names
