--- a/index.html
+++ b/index.html
@@ -523,9 +523,9 @@
 
         // Player colors
         const playerColors = [
-            '#5BC0EB', '#FDE74C', '#9BC53D', '#C3423F', '#404E4D',
-            '#3C91E6', '#342E37', '#A2D729', '#D00000', '#FA824C',
-            '#ffbe0b', '#fb5607', '#ff006e', '#8338ec', '#3a86ff'
+    '#E6194B', '#3CB44B', '#0082C8', '#F58231', '#911EB4',
+    '#46F0F0', '#F032E6', '#D2F53C', '#FABEBE', '#008080',
+    '#AA6E28', '#FFA07A', '#FFD700', '#DC143C', '#20B2AA'
         ];
 
         // Default task names
