--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
         // Default task names
         const defaultTasks = [
             "Eat pasta", "Win a 1v1", "Explode a car", "Pet a dog", "Get 1st place or MVP",
-            "Finish a run (not a literal run)", "Build a Masjid", "Make someone laugh", "Dress in a full purple outfit", "Beat a boss",
+            "Win a run (not a literal run)", "Build a Masjid", "Make someone laugh", "Dress in a full purple outfit", "Beat a boss",
             "Get 10k currency", "Find a Legendary item", "Take a screenshot with 10 zombies in the frame", "Level up", "Kill a friendly NPC",
             "Solve a puzzle", "Find a real life brand", "Kill something while you are dead", "Take a screenshot of a duck", "Perform a 10 hit combo",
             "Get 8 headshots in a row", "Crash the game", "Plant and harvest 3 different plants", "In a character creator, make Dio Brando", "Heal exactly 50HP in one burst"
